src/objects/CS_GW_Profile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>*** Service Cloud GW Profiles*****</description>
    <fields>
        <fullName>CS_CTM_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>*** Case  team Member Search ****</description>
        <label>CTM Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Case_Comment_Public_to_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>*** Service Cloud Case team Member Public to Private  *****</description>
        <label>Case Comment Public to Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Profile_Id_15__c</fullName>
        <description>*** 15 Character Id*****</description>
        <label>Profile Id 15</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id_18__c</fullName>
        <description>*** 18 Character Profile Id *****</description>
        <label>Profile Id 18</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>*** Profile Name****</description>
        <label>Profile Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GW Profile</label>
</CustomObject>